# SSRT-SuperSamsamRayTracer-

./: .gitignore  CMakeLists.txt  OIDN.h  README.md  aabb.h  bvh.h  cameraMT.h  color.h  constant_medium.h  hittable.h  hittable_list.h  image.ppm  image_io.h  image_linear_ACEScg.exr  interval.h  main.cc  material.h  perlin.h  quad.h  ray.h  rtw_exr_image.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  triangle.h  tryOCIO.h  vec3.h
oldcode/: BADcamera.h  camera.h
